--- a/blogserver/src/main/resources/application.properties
+++ b/blogserver/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql:///vueblog2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql:///vueblog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=chuck
-mybatis.config-location=classpath:/mybatis-config.xml
 server.port=8081
 logging.level.org.springframework.security=info
 # spring.data.mongodb.uri=mongodb://root(userName):root(password)@localhost(ip地址):27017(端口号)/gis(collections/数据库)
 spring.data.mongodb.uri=mongodb://chuck1:chuck@localhost:27017/blog
 spring.data.mongodb.username=chuck1
 spring.data.mongodb.password=chuck
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.global-config.db-config.id-type=auto
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.type-aliases-package=org.sang.dataobject
+
+token.expire=3600000
+token.key=chuckchan
