optimize authentication process

--- a/blogserver/src/main/resources/application.properties
+++ b/blogserver/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=chuck
 server.port=8081
-logging.level.org.springframework.security=info
+logging.level.org.springframework.security=debug
 # spring.data.mongodb.uri=mongodb://root(userName):root(password)@localhost(ip地址):27017(端口号)/gis(collections/数据库)
 spring.data.mongodb.uri=mongodb://chuck1:chuck@localhost:27017/blog
 spring.data.mongodb.username=chuck1
