--- a/blogserver/src/main/resources/application.properties
+++ b/blogserver/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/vueblog?useUnicode=true&charac
 #spring.datasource.url=jdbc:mysql:///vueblog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=chuck
+spring.datasource.password=chuckchan
 server.port=8081
 logging.level.org.springframework.security=debug
-# spring.data.mongodb.uri=mongodb://root(userName):root(password)@localhost(ipµØÖ·):27017(¶Ë¿ÚºÅ)/gis(collections/Êý¾Ý¿â)
+# spring.data.mongodb.uri=mongodb://root(userName):root(password)@localhost(ipï¿½ï¿½Ö·):27017(ï¿½Ë¿Úºï¿½)/gis(collections/ï¿½ï¿½ï¿½Ý¿ï¿½)
 spring.data.mongodb.uri=mongodb://chuck1:chuck@localhost:27017/blog
 spring.data.mongodb.username=chuck1
 spring.data.mongodb.password=chuck
