--- a/vueblog/package.json
+++ b/vueblog/package.json
@@ -13,7 +13,10 @@
     "axios": "^0.21.1",
     "element-ui": "^2.0.8",
     "font-awesome": "^4.7.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "mavon-editor": "^2.4.13",
+    "uuidv4": "^6.2.7",
     "vue": "^2.5.2",
     "vue-echarts": "^2.6.0",
     "vue-router": "^3.0.1",
@@ -37,7 +40,6 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
