--- a/blogserver/src/main/resources/application.properties
+++ b/blogserver/src/main/resources/application.properties
@@ -16,3 +16,6 @@ mybatis-plus.global-config.db-config.logic-not-delete-value=0
 mybatis-plus.type-aliases-package=org.sang.dataobject
 token.expire=3600000
 token.key=chuckchan
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+# visit my website http://localhost:8081/index.html#/
